--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -3,9 +3,223 @@
 
 body {
     background-color: #1d1d1d;
+    overflow-y: scroll;
 }
 
-.header, .footer {
-    background-image: 
+.header,
+.footer {
+    background-image:
         linear-gradient(to bottom right, #2f122c, #0f4e61);
+        padding: 20px 0px 0px 0px;
+}
+
+.header-box {
+    background-color: #1d1d1d77;
+}
+
+.brand-box {
+    display: flex;
+    align-items: center;
+    padding-bottom: 10px;
+}
+
+.brand-text {
+    margin-right: auto;
+    margin-left: 0;
+}
+
+.brand-text h2 {
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 900;
+    font-size: 40px;
+    color:#fae3f0;
+    letter-spacing: 5px;
+    margin: 0;
+}
+
+.brand-text h3 {
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    color:#7a87a2;
+    margin: 0;
+}
+
+.logo-img {
+    max-width: 150px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.btns {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-box {
+    max-width: 95.7%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header Button {
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 500;
+    background-color: #a2b4d8;
+    border: none;
+    color: #7a87a2;
+    width: 300px;
+    font-size: 20px;
+    padding: 10px 50px 10px 50px;
+    bottom: 0;
+}
+
+.header Button:hover {
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 500;
+    background-color: #8e9ebd;
+    border: none;
+    color: #fae3f0;
+    width: 300px;
+    font-size: 20px;
+    padding: 10px 50px 10px 50px;
+    bottom: 0;
+}
+
+.page-container {
+    background-color: #a2b4d83d;
+    max-width: 91.7%;
+    margin-left: auto;
+    margin-right: auto;
+    color: #fae3f0;
+    padding: 2%;
+}
+
+.page-container a {
+    color: #a2b4d8;
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.page-container a:hover {
+    color:#8e9ebd;
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.page-container h2 {
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+}
+
+.page-container h3 {
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.social-icon {
+    width: 50px;
+}
+
+.social-container {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+}
+
+.contact-header {
+    text-align: center;
+    top: 0;
+}
+
+.contact-header h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.contact-header h3 {
+    margin-top: 0;
+}
+
+.gotcha-hide {
+    display: none;
+}
+
+.contact-form {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contact-style label {
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 400;
+    color:#fae3f0;
+    font-size: 25px;
+}
+
+.contact-style textarea {
+    resize: none;
+    height: 150px;
+}
+
+.contact-style input {
+    height: 35px;
+    margin-bottom: 15px;
+}
+
+.contact-style input,
+.contact-style textarea {
+    border: none;
+    width: 99.5%;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+}
+
+.contact-form button {
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 500;
+    background-color: #a2b4d8;
+    border: none;
+    color: #7a87a2;
+    width: 100%;
+    height: 50px;
+    font-size: 30px;
+}
+
+.contact-form button:hover {
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 500;
+    background-color: #8e9ebd;
+    border: none;
+    color: #fae3f0;
+    width: 100%;
+    height: 50px;
+    font-size: 30px;
+}
+
+.resume img {
+    width: 100%;
+}
+
+.home-p-container {
+    padding-top: 2%;
+    display: flex;
+    margin-right: 3%;
+    margin-left: 3%;
+}
+
+.home-p-left {
+    text-align: justify;
+    margin-right: 4%;
+}
+
+.home-p-right img {
+    width: 100%;
 }
